fix: text align center

--- a/app/globals.css
+++ b/app/globals.css
@@ -90,7 +90,7 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground font-inter;
+    @apply bg-background text-foreground;
   }
   h1,h2,h3,h4,h5,h6{
     @apply font-cal
